--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
