--- a/site/package.json
+++ b/site/package.json
@@ -18,6 +18,8 @@
     "express-validator": "^6.6.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.2",
-    "path": "^0.12.7"
+    "mysql2": "^2.2.5",
+    "path": "^0.12.7",
+    "sequelize": "^6.3.5"
   }
 }
